new branch with scala and java module and jdk 1.17